feat: apply copyright header to java files add licence to META-INF