@@ -1,3 +1,10 @@
+/**
+ * <p>Copyright (c) 2022-2023 CA Code Affine GmbH (<a href="https://codeaffine.com">codeaffine.com</a>)</p>
+ * <p>All rights reserved. This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v2.0
+ * which accompanies this distribution, and is available at
+ * <a href="https://www.eclipse.org/legal/epl-v20.html">https://www.eclipse.org/legal/epl-v20.html</a></p>
+ */
 package com.codeaffine.tiny.star.tck;
 
 import lombok.Getter;
@@ -115,8 +122,7 @@ class UserSession {
 
     @SneakyThrows({URISyntaxException.class, MalformedURLException.class})
     private URI urlToUriWithCidParameter(String cid) {
-        return new URL(url.getProtocol(), url.getHost(), url.getPort(), url.getFile() + "?cid=" + cid)
-            .toURI();
+        return new URI(url.getProtocol(), null, url.getHost(), url.getPort(), url.getFile() + "?cid=" + cid, null, null);
     }
 
     private String parseCid() {
